# LeMMing

./: .env.example  .gitignore  AUDIT_REPORT.md  CONFLICTS_RESOLVED.md  CONTRIBUTING.md  Dockerfile  LEMMING_SOURCE_OF_TRUTH.md  LICENSE  LeMMing Whitepaper.docx  Makefile  PROJECT_RULES.md  README.md  ROADMAP.md  SOURCE_OF_TRUTH_AUTOPILOT.md  SPEC_DRIFT_AUDIT_REPORT.md  SPEC_DRIFT_FIXES_REPORT.md  START_LEMMING.bat  STOP_LEMMING.bat  TASKS_COMPLETION_REPORT.md  TUNE_UP_REPORT.md  TUNE_UP_SUMMARY.md  agent_workflow_log.txt  auto_agent_task.ps1  benchmark_memory.py  docker-compose.yml  fix_api.sh  fix_dept_cli.py  fix_dept_cli.sh  fix_lines.py  fix_lines_2.py  fix_lines_3.py  fix_lines_4.py  fix_lines_5.py  fix_lines_6.py  fix_lines_7.py  fix_lines_8.py  fix_lint.py  fix_lint2.py  fix_mypy.py  fix_test.py  (+30 more)
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
.pytest_temp/: test_agent_discoverycurrent  test_api_agents_returns_all_vacurrent  test_api_messages_returns_rececurrent  test_api_status_reports_tick_acurrent  test_archive_missing_dircurrent  test_collect_with_wildcardcurrent  test_compute_fire_point_formulcurrent  test_config_cache_reset_betweecurrent  test_create_agent_path_traverscurrent  test_delete_missing_returns_facurrent  test_deterministic_ordering_accurrent  test_discover_skips_invalid_agcurrent  test_every_tick_agent_fire_poicurrent  test_file_write_limitcurrent  test_file_write_within_limitcurrent  test_full_cyclecurrent  test_get_agent_dir_securitycurrent  test_intra_tick_ordering_by_ficurrent  test_intra_tick_ordering_tiebrcurrent  test_list_memories_missing_dircurrent  test_load_from_json_resumecurrent  test_load_missing_returns_nonecurrent  test_malformed_resume_json_faicurrent  test_memory_delete_operationcurrent  test_memory_read_traversal_blocurrent  test_memory_write_limitcurrent  test_memory_write_traversal_blcurrent  test_memory_write_within_limitcurrent  test_missing_resume_json_raisecurrent  test_mixed_schedules_orderingcurrent  test_outbox_recipients_are_precurrent  test_paths_are_sandboxed_to_wocurrent  test_read_agent_logs_traversalcurrent  test_save_creates_directorycurrent  test_schedulingcurrent  test_send_and_inbox_flowcurrent  test_shell_tool_pipe_bypasscurrent  test_shell_tool_prohibits_pythcurrent  test_shell_tool_sandbox_argumecurrent  test_shell_tool_vulnerabilitiecurrent  (+9 more)
benchmarks/: bench_cleanup.py  benchmark_list_messages.py  benchmark_list_messages_heavy.py  benchmark_list_messages_optimized.py  repro_inbox_perf.py
departments/: content_team.json  research.json
dev_bus/: lab_notebook.md  next_agent_prompt.md
docs/: AGENT_GUIDE.md  Architecture.md  CLI_Agent_Spec.md  Concepts.md  Departments_and_Social_Organization.md  LeMMing_Whitepaper_v1.0.txt  Modularity_and_Departments.md  NEXT_STEPS.md  Overview.md  Scheduling.md  TROUBLESHOOTING.md  Tools_and_Connectors.md  UI_Vision.md
lemming/: __init__.py  agents.py  api.py  bootstrap.py  chat_interface.py  cli.py  config_validation.py  department.py  department_cli.py  engine.py  file_dispatcher.py  logging_config.py  memory.py  messages.py  messaging.py  models.py  org.py  paths.py  providers.py  tools.py
logs/: changes.md  errors.md  experiments.md
scripts/: migrate_resumes.py  toast_alt_enter.py
social/: social_graph.json
tests/: __init__.py  conftest.py  test_agents.py  test_agents_new.py  test_api.py  test_api_auth.py  (+48 more)
(+127 files in other folders)
