[project]
name = "lemming"
version = "0.1.0"
description = "LeMMing: Lightweight Multi-Model Engine for local multi-agent orchestration"
authors = [{name = "LeMMing Maintainers"}]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
]
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
