[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lemming"
version = "1.0.0"
description = "A filesystem-first multi-agent orchestration framework"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "jsonschema>=4.21.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "fastapi>=0.104.0",
    "websockets>=12.0",
    "anthropic>=0.7.0",
]

[project.optional-dependencies]
api = ["uvicorn[standard]>=0.24.0"]
dev = [
    "types-requests",
    "types-jsonschema",
]
llm = []

[tool.setuptools.packages.find]
include = ["lemming", "lemming.*"]

[tool.mypy]
files = "lemming"
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema", "requests"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.black]
line-length = 120
target-version = ['py311']
